--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "reactbuild",
+  "homepage": "https://koushikdebn.github.io/reactto/",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -7,7 +8,11 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "predeploy":"npm run build",
+    "deploy": "gh-pages -d dist"
+
+
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.5.0",
